# x402-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  db.py  server.py
src/clients/: solana.py
src/tools/: payments.py
